<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grow.cmputf17team4.grow.Views.ActivityModifyHabit">

    <android.support.v7.widget.CardView
        style="?attr/cardStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/modify_habit_text_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="Repeat:"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/modify_habit_btn_statstic"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modify_habit_text_repeat"
                app:layout_constraintVertical_bias="1.0">

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkMark="@drawable/check"
                    android:checked="false"
                    android:text="     Every Sunday"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="     Every Monday"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="     Every Tuesday"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="     Every Wednesday"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="     Every Thursday"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="     Every Friday"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/modify_habit_checkbox_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="     Every Saturday"
                    android:textSize="18sp" />


            </LinearLayout>

            <Button
                android:id="@+id/modify_habti_btn_confirm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:onClick="onCreateHabitConfirm"
                android:text="Confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/modify_habit_btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorDelete"
                android:onClick="onModifyHabitDelete"
                android:text="Delete"
                app:layout_constraintBottom_toTopOf="@+id/modify_habti_btn_confirm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/modify_habit_edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Habit Name"
                android:inputType="textShortMessage"
                android:maxLength="20"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/modify_habit_edit_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Habit Reason"
                android:inputType="textShortMessage"
                android:maxLength="30"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modify_habit_edit_name" />

            <EditText
                android:id="@+id/modify_habit_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:focusable="false"
                app:layout_constraintLeft_toRightOf="@+id/textView2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modify_habit_edit_reason" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="Start Date:"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modify_habit_edit_reason" />

            <Button
                android:id="@+id/modify_habit_btn_statstic"
                android:onClick="onStasticClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:text="Statstic"
                app:layout_constraintBottom_toTopOf="@+id/modify_habit_btn_delete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
