<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grow.cmputf17team4.grow.Views.ActivityModifyEvent">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        style="?attr/cardStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/modify_event_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/noimage"
                style="@style/AppTheme.ImageView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/modify_event_attached_location"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/modify_event_btn_pick_image"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" />

            <ImageButton
                android:id="@+id/modify_event_btn_pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/button2"
                android:background="@android:color/white"
                app:srcCompat="@drawable/choose_pic"
                app:layout_constraintLeft_toRightOf="@+id/modify_event_btn_take_photo"
                android:layout_marginLeft="8dp"
                app:layout_constraintRight_toLeftOf="@+id/button2"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="onEventPickImage"
                app:layout_constraintBottom_toTopOf="@+id/modify_event_btn_delete" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                android:onClick="onModifyEventConfirm"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/modify_event_btn_delete" />

            <ImageButton
                android:id="@+id/modify_event_btn_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:srcCompat="@drawable/take_photo"
                android:layout_marginLeft="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="8dp"
                android:onClick="onEventTakePhoto"
                app:layout_constraintBottom_toTopOf="@+id/modify_event_btn_delete" />

            <TextView
                android:id="@+id/modify_event_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.3"
                android:text="Congratulations!\nYou have finished your task today!"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/modify_event_edit_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="   Leave some comment here..."
                android:inputType="textShortMessage"
                android:maxLength="20"
                android:textAlignment="textStart"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modify_event_text" />

            <Button
                android:id="@+id/modify_event_btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="delete"
                android:backgroundTint="@color/colorDelete"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:onClick="onModifyEventDelete"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="32dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <Switch
                android:id="@+id/modify_event_attached_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/imageButton2"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/modify_event_edit_comment"
                android:text="Attach my location"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/modify_event_edit_comment"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
